Update project: added images and edited html files

--- a/about.html
+++ b/about.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About gallery</title>
+  <meta charset="UTF-8">
+  <title>About the Gallery</title>
+  <style>
+    body {
+      background-color: #fffaf5;
+      font-family: Georgia;
+    }
+    nav a { margin: 10px; color: darkgreen; }
+  </style>
 </head>
 <body>
-    
+
+  <h1>About Our Gallery</h1>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="exhibitions.html">Exhibitions</a>
+    <a href="contacts.html">Contacts</a>
+  </nav>
+
+  <p><font color="darkgreen" size="4">The gallery was founded in 2001 and is one of the leading art spaces in Ukraine.</font></p>
+  <p><b>We collect</b> works of classical, modern, and folk art.</p>
+
+  <h2>Main Areas:</h2>
+  <ul>
+    <li>Ukrainian Painting</li>
+    <li>World Artists</li>
+    <li>Contemporary Art</li>
+  </ul>
+
+  <dl>
+    <dt>Painting</dt>
+    <dd>The art of applying paint to a surface to create images</dd>
+  </dl>
+
 </body>
 </html>
