--- a/exh.html
+++ b/exh.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exhibitions</title>
+  <meta charset="UTF-8">
+  <title>Upcoming Exhibitions</title>
+  <style>
+    body {
+      background-image: url('images/bg.jpg');
+      background-size: cover;
+      font-family: Verdana;
+      color: #111;
+    }
+    table, td, th {
+      border: 1px solid #444;
+      border-collapse: collapse;
+      padding: 8px;
+    }
+    th { background-color: #ddd; }
+  </style>
 </head>
 <body>
-    
+
+  <h1>Upcoming Exhibitions</h1>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="exhibitions.html">Exhibitions</a>
+    <a href="contacts.html">Contacts</a>
+  </nav>
+
+  <h2>Schedule</h2>
+  <table>
+    <caption>Exhibition Announcements</caption>
+    <tr>
+      <th>Title</th>
+      <th>Date</th>
+      <th>Location</th>
+    </tr>
+    <tr>
+      <td>Spring Painting</td>
+      <td>June 15, 2025</td>
+      <td>Main Hall</td>
+    </tr>
+    <tr>
+      <td>Young Artists</td>
+      <td>July 1, 2025</td>
+      <td>Gallery Room 2</td>
+    </tr>
+  </table>
+
+  <h3>Wikipedia Frame</h3>
+  <iframe src="https://en.wikipedia.org/wiki/Art_exhibition" width="400" height="300"></iframe>
+
 </body>
 </html>
