--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Picture gallery</title>
+  <meta charset="UTF-8">
+  <title>Art Gallery — Home</title>
+  <style>
+    body {
+      background-color: #fdf6f0;
+      font-family: Arial;
+      color: #333;
+    }
+    nav a {
+      margin: 10px;
+      text-decoration: none;
+      color: darkblue;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    
-    
+
+  <h1>Welcome to Our Art Gallery</h1>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="exhibitions.html">Exhibitions</a>
+    <a href="contacts.html">Contacts</a>
+  </nav>
+
+  <p><b>Our gallery</b> is a place where art, beauty, and history meet.</p>
+  <p><i>Experience the atmosphere of cultural heritage through painting, graphics, and sculpture.</i></p>
+
+  <a href="https://knag.museum/index.php/uk/" target="_blank">Official example site</a>
+
+  <h2>Sample Exhibit</h2>
+  <a href="images/painting-full.jpg" target="_blank">
+    <img src="images/painting-small.jpg" width="300" alt="Painting">
+  </a>
+
 </body>
 </html>
