--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+  <meta charset="UTF-8">
+  <title>Contacts</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+      font-family: Tahoma;
+    }
+    nav a { margin: 10px; color: brown; }
+  </style>
 </head>
 <body>
-    
+
+  <h1>Contact Information</h1>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="exhibitions.html">Exhibitions</a>
+    <a href="contacts.html">Contacts</a>
+  </nav>
+
+  <p><b>Address:</b> 12 Art Street, Kyiv, Ukraine</p>
+  <p><b>Email:</b> gallery@example.com</p>
+  <p><b>Phone:</b> +380 44 123 4567</p>
+
+  <h3>How to find us:</h3>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="400" height="300" allowfullscreen></iframe>
+
 </body>
 </html>
