--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="exhibitions.html">Exhibitions</a>
+    <a href="exh.html">Exhibitions</a>
     <a href="contacts.html">Contacts</a>
   </nav>
 
