--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
   </style>
 </head>
-<body>
+<body link="red", vlink="blue", alink="pink">
 
   <h1>Welcome to Our Art Gallery</h1>
 
@@ -31,9 +31,8 @@
   </nav>
 
   <p><b>Our gallery</b> is a place where art, beauty, and history meet.</p>
-  <p><i>Experience the atmosphere of cultural heritage through painting, graphics, and sculpture.</i></p>
-
-  <a href="https://knag.museum/index.php/uk/" target="_blank">Official example site</a>
+  <p><i>Experience the atmosphere of cultural heritage through painting, graphics, and sculpture. <a href="exh.html">Also
+     you can view our next exhibitions</a></a></a></i></p>
 
   <h2>Sample Exhibit</h2>
   <a href="images/painting-full.jpg" target="_blank">
