Lab 3: додано CSS стилі, списки, таблиці

--- a/exh.html
+++ b/exh.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Upcoming Exhibitions</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       background-image: url('images/bg.jpg');
