--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Art Gallery — Home</title>
+  <link rel="stylesheet" href="style.css">
   <style>
+     a {
+    color: purple !important;
+  }
     body {
       background-color: #fdf6f0;
       font-family: Arial;
