--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About the Gallery</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       background-color: #fffaf5;
@@ -22,7 +23,7 @@
     <a href="contacts.html">Contacts</a>
   </nav>
 
-  <p><font color="darkgreen" size="4">The gallery was founded in 2001 and is one of the leading art spaces in Ukraine.</font></p>
+  <p style="font-size: 18px; color: navy; font-style: italic !important;"></style>The gallery was founded in 2001 and is one of the leading art spaces in Ukraine.</font></p>
   <p><b>We collect</b> works of classical, modern, and folk art.</p>
 
   <h2>Main Areas:</h2>
