--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contacts</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       background-color: #f2f2f2;
