Лабораторна №4 — селектори CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <title>Art Gallery — Home</title>
   <link rel="stylesheet" href="style.css">
   <style>
-     a {
+    b + i {
+      color: red;
+    }
+
+     nav a {
     color: purple !important;
   }
     body {
@@ -35,8 +39,8 @@
   </nav>
 
   <p><b>Our gallery</b> is a place where art, beauty, and history meet.</p>
-  <p><i>Experience the atmosphere of cultural heritage through painting, graphics, and sculpture. <a href="exh.html">Also
-     you can view our next exhibitions</a></a></a></i></p>
+  <p><i>Experience </i> <b>the atmosphere of cultural heritage through</b> <i>painting, graphics, and sculpture. <a href="exh.html">Also
+     you can view our next exhibitions</i></a></p>
 
   <h2>Sample Exhibit</h2>
   <a href="images/painting-full.jpg" target="_blank">
