--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@
       background-color: #fffaf5;
       font-family: Georgia;
     }
+    p b{
+      color: blue;
+    }
     nav a { margin: 10px; color: darkgreen; }
   </style>
 </head>
