--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       font-family: Georgia;
     }
     p b{
-      color: blue;
+      color: blue; /*контекстний селектор*/
     }
     nav a { margin: 10px; color: darkgreen; }
   </style>
