--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 </head>
 <body link="red", vlink="blue", alink="pink">
 
-  <h1>Welcome to Our Art Gallery</h1>
+  <h1>Welcome to Our Art Gallery</h1>¨
+  <p>something</p>
 
   <nav>
     <a href="index.html">Home</a>
