--- a/about.html
+++ b/about.html
@@ -12,7 +12,11 @@
     p b{
       color: blue; /*контекстний селектор*/
     }
-    nav a { margin: 10px; color: darkgreen; }
+    nav a { margin: 10px; color: darkgreen; 
+    }
+    ul>li{
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
   </style>
 </head>
 <body>
@@ -42,4 +46,5 @@
   </dl>
 
 </body>
+
 </html>
