--- a/contacts.html
+++ b/contacts.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Contacts</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background-color: #f2f2f2;
-      font-family: Tahoma;
-    }
-    nav a { margin: 10px; color: brown; }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Contacts</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+     body {
+        background-color: #f2f2f2;
+        font-family: Tahoma;
+      }
+      nav a {
+        margin: 10px;
+        color: brown;
+      }
+      p {
+        color:blueviolet;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Contact Information</h1>
 
-  <h1>Contact Information</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="exh.html">Exhibitions</a>
+      <a href="contacts.html">Contacts</a>
+    </nav>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="exh.html">Exhibitions</a>
-    <a href="contacts.html">Contacts</a>
-  </nav>
+    <p><b>Address:</b> 12 Art Street, Kyiv, Ukraine</p>
+    <p><b>Email:</b> gallery@example.com</p>
+    <p><b>Phone:</b> +380 44 123 4567</p>
 
-  <p><b>Address:</b> 12 Art Street, Kyiv, Ukraine</p>
-  <p><b>Email:</b> gallery@example.com</p>
-  <p><b>Phone:</b> +380 44 123 4567</p>
+    <h3>How to find us:</h3>
 
-  <h3>How to find us:</h3>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="400" height="300" allowfullscreen></iframe>
-
-</body>
+    <iframe
+      width="400"
+      height="300"
+      allowfullscreen
+      src="https://maps.google.com/maps?q=Kyiv&output=embed"
+    ></iframe>
+  </body>
 </html>
+
