--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@
     }
     ul>li{
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: blueviolet;
+    }
+    ul li{
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: red;
     }
   </style>
 </head>
