--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
     .example a {
       font-style: italic;
     }
+
 </style>
 </head>
 <body link="red", vlink="blue", alink="pink">
 
-  <h1 id="main-title">Welcome to Our Art Gallery</h1>
+  <h1 id="main-title" class="main-title">Welcome to Our Art Gallery</h1>
 
   <nav class="example">
     <a class="links" href="index.html">Home</a>
@@ -52,10 +53,20 @@
   </ol>
 
   <h2>Sample Exhibit</h2>
+
+<div class="gallery-item">
+
   <a href="images/painting-full.jpg" target="_blank">
-    <img src="images/painting-small.jpg" width="300" alt="Painting">
+    <img img src="images/painting-small.jpg" width="300" alt="Painting">
   </a>
 
+  <span class="art-title"><q>Кочегар</q></span>
+  <nav></nav>
+  <span class="artist-name"><b>Подерв'янський Сергій Павлович</b></span>
+  <nav></nav>
+
+</div>
+<nav></nav>
 </body>
 </html>
 
