зміни для 5 лабки

--- a/about.html
+++ b/about.html
@@ -45,11 +45,18 @@
     <li>Contemporary Art</li>
   </ul>
 
-  <dl>
+  <dl class="block">
     <dt>Painting</dt>
     <dd>The art of applying paint to a surface to create images</dd>
-  </dl>
+  </dl> <!-- position -->
 
+
+    Welcome to the Ukrainian Art Gallery Nestled in the heart of cultural heritage, 
+    the Ukrainian Art Gallery showcases a rich tapestry of traditional and contemporary masterpieces. <br>
+<div id="floating"> <img src="images/picofgal.jpg" width="300" alt="Gallery"></a></div>
+    From vibrant folk motifs to bold modern expressionism, each artwork tells the story of a nation shaped by resilience, beauty, 
+and creativity. <br>
+    Step inside and discover the soul of Ukraine through the eyes of its artists. <br>  <!-- float -->
 </body>
 
 </html>
