--- a/exh.html
+++ b/exh.html
@@ -16,6 +16,16 @@
         color: darkblue;
         text-decoration: none;
       }
+      a:link ,a:visited{
+        color: black;
+        text-decoration:none
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      a:active{
+        color: brown;
+      }
       /*table,
       td,
       th {
