--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
     }
     nav a {
       margin: 10px;
-      text-decoration: none;
       color: darkblue;
-    }
-    a:hover {
-      text-decoration: underline;
     }
     .example a {
       font-style: italic;
@@ -45,7 +41,7 @@
   <p><b><a href="about.html">Our gallery</a></b> is a place where art, beauty, and history meet.</p>
   <p><i>Experience </i> <b>the atmosphere of cultural heritage through</b> <i>painting, graphics, and sculpture. <a href="exh.html">Also
      you can view our next exhibitions</i></a></p>
- 
+
   <ol>
     <li><strong>Landscapes of Emotion</strong> — July 10–August 15</li>
     <li><strong>Modern Sculpture Dialogues</strong> — September 1–October 5</li>
@@ -59,12 +55,12 @@
   <a href="images/painting-full.jpg" target="_blank">
     <img img src="images/painting-small.jpg" width="300" alt="Painting">
   </a>
-
+<div style="text-align: center;">
   <span class="art-title"><q>Кочегар</q></span>
   <nav></nav>
   <span class="artist-name"><b>Подерв'янський Сергій Павлович</b></span>
   <nav></nav>
-
+</div>
 </div>
 <nav></nav>
 </body>
